# videoapi

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/videoapi/: cli.py  database.db  test.py
tests/: test_videoapi.py
